@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2017-05-25 r72736) -- "Unsuffered Consequences"
+R Under development (unstable) (2017-06-05 r72769) -- "Unsuffered Consequences"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -5527,7 +5527,9 @@ Levels: 7 8 9 10 11 12
 [2,] 8    10  
 Levels: 7 8 9 10 11 12
 > A[, 1:2, drop=TRUE]
-[1] 7  8  9  10
+     [,1] [,2]
+[1,] 7    9   
+[2,] 8    10  
 Levels: 7 8 9 10
 > A[1,1] <- "9"
 > A
