@@ -49,6 +49,9 @@
 
       \item \code{order()} is smarter about picking a default sort
       \code{method} when its arguments are objects.
+
+      \item \code{factor()} and hence \code{droplevels()} now keep
+      \code{attributes}.
     }
   }
 
